<resources>
    <string-array name="player_mode">
        <item>顺序播放</item>
        <item>随机播放</item>
        <item>单曲循环</item>
        <item>列表循环</item>
    </string-array>
    <string-array name="list_tab_items">
        <item>本地音乐</item>
        <item>网络音乐</item>
        <item>下载管理</item>
    </string-array>
    <string name="app_name">魔笛音乐</string>
    <string name="scan_title">扫描歌曲</string>
    <string name="btn_scan_ok">扫描歌曲</string>
    <string name="btn_scan_add">添加目录</string>
    <string name="scan_directory_title">添加扫描目录</string>
    <string name="btn_scan_directory_goup">↑ 返回上一级</string>
    <string name="btn_san_directory_add">添加</string>
    <string name="btn_san_directory_back">返回</string>
    <string name="btn_list_random_music">随机播放</string>
    <string name="skinsetting_title">皮肤设置</string>
    <string name="systemsetting_title">系统设置</string>
    <string name="about_title">关于作者</string>
    <string name="exit_title">退出</string>
    <string name="brightness_title">正常模式</string>
    <string name="darkness_title">夜间模式</string>
    <string name="sleep_title">定时关闭</string>
    <string name="share_title">分享</string>
    <string name="about_content">
        本产品只作为软件测试，并无商业用途。\n大部分图片资源版权归属于其他同类软件版权所用。\n与作者无关，在此忠心谢谢了!\n如需要追究版权，请先联系作者，会做及时修改!\nwww.javaapk.com测试
    </string>
    <string name="appwidget_labelname">魔笛音乐(1x4)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="slide_menu_login_register_text">登录/注册>>></string>
    <string name="slide_menu_message_text">消息中心</string>
    <string name="slide_menu_my_friend_text">我的好友</string>
    <string name="slide_menu_member_text">会员中心</string>
    <string name="slide_menu_cell_phone_traffic">流量包月</string>
    <string name="slide_menu_timeclose_text">定时关闭</string>
    <string name="slide_menu_sound_text">蝰蛇音效</string>
    <string name="slide_menu_listen_song_text">语音点歌</string>
    <string name="slide_menu_hello_text">启动问候音</string>
    <string name="slide_menu_wifi_text">仅WIFI联网</string>
    <string name="slide_menu_desk_lyric_text">桌面歌词</string>
    <string name="slide_menu_lock_lyric_text">锁屏歌词</string>
    <string name="slide_menu_setting_text">设置</string>
    <string name="slide_menu_back_text">退出</string>
    <string name="action_settings">Settings</string>
    <string name="now_listening_to">现在播放:</string>
    <string name="by">艺术家:</string>
    <string name="share_track_using">分享此曲目</string>
    <string name="title_activity_settings">设置</string>
    <string name="pref_header_general">常规设置</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">用户名</string>
    <string name="pref_default_display_name">Jqy Modi</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">数据同步</string>
    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value"/>
    <string name="pref_title_system_sync_settings">同步账户</string>
    <string name="pref_header_notifications">通知栏设置</string>
    <string name="pref_title_new_message_notifications">新消息通知</string>
    <string name="pref_description_new_message_notifications">有新的推送消息时显示到通知栏</string>
    <string name="pref_title_ringtone">铃声设置</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">振动</string>
    <string name="pref_description_vibrate">是否开启振动</string>
    <string name="title_activity_scrolling">Modi Music</string>
    <string name="pref_title_traffic_download_photo">消耗流量下载图片</string>
    <string name="pref_description_traffic_download_photo">建议WiFi下开启</string>
    <string name="pref_title_traffic_download_lrc">消耗流量下载歌词</string>
    <string name="pref_description_traffic_download_lrc">消耗流量很少,建议开启</string>
    <string name="pref_title_traffic_listener_online">消耗流量在线听音乐</string>
    <string name="pref_description_traffic_listener_online">建议WiFi下开启</string>
    <string name="pref_description_show_lrc_play">在播放界面显示歌词，建议开启</string>
    <string name="pref_title_show_lrc_play">显示播放界面歌词</string>
    <string name="pref_description_show_flow_tag">在播放界面显示浮动标签，建议开启</string>
    <string name="pref_title_show_flow_tag">显示浮动标签</string>
    <string name="pref_title_play_bg">设置播放背景</string>
    <string name="pref_description_play_bg">点击设置播放背景界面壁纸</string>
    <string name="pref_description_try_listener">歌曲播放10秒后自动切换到下一首</string>
    <string name="pref_title_try_listener">开启试听模式</string>
    <string name="pref_description_memory_exit">打开音乐进入上次退出位置</string>
    <string name="pref_title_memory_exit">记忆退出位置</string>
    <string name="pref_description_check_update">会消耗少量流量，建议开启</string>
    <string name="pref_title_check_update">自动检测更新</string>
    <string name="pref_description_im_check_update">检测是否有新版本需要更新</string>
    <string name="pref_title_im_check_update">立即检测更新</string>
    <string name="pref_title_about">关于</string>
    <string name="slide_menu_sleep_text">定时关闭</string>
    <string name="pref_description_show_lrc_desk">显示桌面歌词</string>
    <string name="pref_title_show_lrc_desk">桌面歌词</string>
    <string name="slide_menu_brightness_text">护眼模式</string>
    <string name="slide_menu_flow_tag_text">悬浮标签个数</string>
    <string name="slide_menu_scanning_tag_text">扫描歌曲</string>
</resources>